================

 - Extended the subselect support. See :ref:`SELECT Reference
   <sql_reference_subselect>` for details.

Changes
=======

 - Added support for ``GROUP BY`` in combination with subselect. E.g.::

     select x, count(*) from (select x from t limit 1) as tt group by x;

 - Implemented hash sum scalar functions (MD5, SHA1).
   Please see :ref:`sha1 <sha1>`.

Fixes
=====

 - Fixed error thrown when applying filtering, ordering or limit on
   joins with more than 2 tables.

 - Use the region of the EC2 instance for EC2 discovery when neither
   ``cloud.aws.ec2.endpoint`` nor ``cloud.aws.region`` are specified or do not
   resolve in a valid service endpoint.

 - Use crate favicon instead of elasticsearch.

 - Fixed issue which lead to an object's column policy being changed to
   the default DYNAMIC when adding a nested object column using the
   `alter table` statement.

 - Fix: `sys.snapshot` queries hung instead of throwing an error if something
   went wrong.

 - Fixed an issue with `regexp_replace`: In some cases it used the third
   argument as flags parameter instead of the fourth argument.

 - Fixed an issue which lead to brief unavailability of already registered
   functions after a function was created or dropped in the same schema.

 - Improved error message when trying to update an element of an array.

 - Fixed a regression that lead to `ArrayIndexOutOfBoundsException` if a JOIN
   query was made with a WHERE clause on partitioned columns.

 - Fixed a NullPointerException which could occur if an attempt was made to use
   `match` on two different relations within an explicit join condition.
   This now raises a proper error stating that it's not supported.

 - Wrong results were returned from queries with more than one level
   of nested subselects.

 - Fix: Appearance of NPE during startup of crate

 - ``ORDER BY`` on joins caused incorrect order of values when having multiple